--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,20 @@
 <h1>Hello World!</h1>
+
+<div id="app">
+  <input v-model="message" placeholder="Type your name here">
+  <p v-if="hasMessage">Hello, {{ message }}</p>
+</div>
+
+<script>
+  var app = new Vue({
+    el: '#app',
+    data: {
+      message: ''
+    },
+    computed: {
+      hasMessage() {
+        return this.message.length > 0
+      }
+    }
+  })
+</script>
